<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blind Sight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="API_KEY">AIzaSyA65Al7OMVH58nLFj-PQQUpgAv11HjGhto</string>

    <string name="edit_from">From: current location</string>
    <string name="edit_to">To:</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="originEditTextDescription">The address where the navigation will start. Default to your current location</string>
    <string name="destinationEditTextDescription">You destination.</string>
    <string name="searchButtonDescription">search, navigate to the given destination from the given origin</string>
    <string name="searchButtonText">search</string>
    <string name="nextLocationButtonText">next step</string>
    <string name="nextLocationButtonDescription">Skip this turn and go to the next turn</string>
    <string name="trafficLightButtonText">traffic light</string>
    <string name="trafficLightButtonDescription">Traffic light mode. See if the traffic light ahead is red or green.</string>

</resources>
