<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/myShit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:visibility="invisible"/>


    <!--view
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        class="com.google.android.gms.maps.MapView"
        android:id="@+id/CustomMapView"
        android:layout_below="@+id/edit_message"
        android:layout_toEndOf="@+id/nextLocation"
        android:layout_alignEnd="@+id/myShit" /-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editTextOrigin"
            android:hint="@string/edit_from" />
        <!--android:contentDescription="@string/originEditTextDescription"-->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editTextDestination"
            android:hint="@string/edit_to" />
        <!--android:contentDescription="@string/destinationEditTextDescription"-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonFind"
                android:onClick="findPath"
                android:text="@string/searchButtonText"
                android:contentDescription="@string/searchButtonDescription"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextLocation"
                android:onClick="nextStep"
                android:text="@string/nextLocationButtonText"
                android:contentDescription="@string/nextLocationButtonDescription"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trafficLight"
                android:onClick="findTrafficLight"
                android:text="@string/trafficLightButtonText"
                android:contentDescription="@string/trafficLightButtonDescription"
                style="?android:buttonBarButtonStyle" />
        </LinearLayout>


        <TextView android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:visibility="visible"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="Demo"
            android:contentDescription="Demo."
            style="?android:buttonBarButtonStyle"
            android:onClick="startDemo"
            android:id="@+id/button"
            android:layout_gravity="bottom|center_horizontal" />

    </LinearLayout>

</RelativeLayout>

